# gp-ejection-fraction-prediction

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 1-eda.ipynb  2-data_cleaning.ipynb  setup.py
src/: __init__.py  config.py  dataset.py  plots.py
src/modeling/: model.py  predict.py  train.py
